Update tests to new default
Change-Id: I3b94013d779bf1b934775b4ee1cec11a94635577

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = bashate,pep8
+envlist = linters
 minversion = 2.3
 skipsdist = True
 
@@ -11,9 +11,21 @@ setenv = VIRTUAL_ENV={envdir}
          OS_TEST_TIMEOUT=60
 deps = -r{toxinidir}/test-requirements.txt
 
-[testenv:bashate]
+[testenv:linters]
+whitelist_externals = bash
 commands =
-  bash -c "ls build-tools/*.sh | xargs bashate -v {posargs}"
+  bash -c "find {toxinidir}          \
+         -not \( -type d -name .?\* -prune \) \
+         -type f                              \
+         -not -name \*~                       \
+         -not -name \*.md                     \
+         -name \*.sh                          \
+         -print0 | xargs -0 bashate -v"
+  bash -c "find {toxinidir}        \
+            \( -name middleware/io-monitor/recipes-common/io-monitor/io-monitor/io_monitor/test-tools/yaml/* -prune \) \
+            -o \( -name .tox -prune \)         \
+            -o -type f -name '*.yaml'       \
+            -print0 | xargs -0 yamllint"
 
 [testenv:pep8]
 usedevelop = False
@@ -25,9 +37,3 @@ commands =
 
 [testenv:venv]
 commands = {posargs}
-
-[testenv:true]
-# Use same environment directory as pep8 env to save space and install time
-envdir = {toxworkdir}/venv
-commands = true
-whitelist_externals = true
