--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,9 +1,9 @@
 - project:
     check:
       jobs:
-        - openstack-tox-bashate:
+        - openstack-tox-linters:
             voting: false
     gate:
       jobs:
-        - openstack-tox-bashate:
+        - openstack-tox-linters:
             voting: false
