Fix linters issues and enable tox/zuul linters job as gate
Fix below issues:
    E003 Indent not multiple of 4
    E011 Then keyword is not on same line as if or elif keyword
    E020: Function declaration not in format "^function name {$": 'function check_all_explicit_deps_installed'

add ignore in tox env
    E010: Do not on same line as
    E006 Line too long

Change-Id: I13fb83452324c0db74c485f304827a6c9aacf9ae
Story: 2003370
Task: 24431
Signed-off-by: Sun Austin <austin.sun@intel.com>

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,9 @@ setenv = VIRTUAL_ENV={envdir}
 deps = -r{toxinidir}/test-requirements.txt
 
 [testenv:linters]
+#ignore below cases
+#E010: Do not on same line as 
+#E006 Line too long
 whitelist_externals = bash
 commands =
   bash -c "find {toxinidir}          \
@@ -20,7 +23,7 @@ commands =
          -not -name \*~                       \
          -not -name \*.md                     \
          -name \*.sh                          \
-         -print0 | xargs -0 bashate -v"
+         -print0 | xargs -0 bashate -v -i E010"
   bash -c "find {toxinidir}        \
             \( -name middleware/io-monitor/recipes-common/io-monitor/io-monitor/io_monitor/test-tools/yaml/* -prune \) \
             -o \( -name .tox -prune \)         \
