--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,5 +1,7 @@
 - project:
     check:
       jobs:
-        - openstack-tox-linters:
-            voting: false
+        - openstack-tox-linters
+    gate:
+      jobs:
+        - openstack-tox-linters
