--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,9 @@ setenv = VIRTUAL_ENV={envdir}
 deps = -r{toxinidir}/test-requirements.txt
 
 [testenv:linters]
+# ignore below cases
+# E006 Line too long
+# E010: Do not on same line as it commands
 whitelist_externals = bash
 commands =
   bash -c "find {toxinidir}          \
@@ -20,7 +23,7 @@ commands =
          -not -name \*~                       \
          -not -name \*.md                     \
          -name \*.sh                          \
-         -print0 | xargs -0 bashate -v"
+         -print0 | xargs -0 bashate -v -i E006,E010"
   bash -c "find {toxinidir}        \
             \( -name middleware/io-monitor/recipes-common/io-monitor/io-monitor/io_monitor/test-tools/yaml/* -prune \) \
             -o \( -name .tox -prune \)         \
