--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ setenv = VIRTUAL_ENV={envdir}
 deps = -r{toxinidir}/test-requirements.txt
 
 [testenv:linters]
+basepython = python3
 # ignore below cases
 # E006 Line too long
 # E010: Do not on same line as it commands
@@ -31,6 +32,7 @@ commands =
             -print0 | xargs -0 yamllint"
 
 [testenv:pep8]
+basepython = python3
 usedevelop = False
 skip_install = True
 deps =
@@ -39,4 +41,5 @@ commands =
     pep8
 
 [testenv:venv]
+basepython = python3
 commands = {posargs}
